@@ -27,6 +27,11 @@
 
   * Add paramiko-based SSH vendor. (Aaron O'Mullan)
 
+ API CHANGES
+
+  * SSHVendor.connect_ssh has been renamed to SSHVendor.run_command.
+    (Jelmer Vernooij)
+
 0.9.0	2013-05-31
 
  BUG FIXES
